<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="5"
              android:background="@color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/white"
            >

        <TextView
                android:id="@+id/remoteUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="14dp"
                android:text="Sample user"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp"/>

        <TextView
                android:id="@+id/callState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/incoming_call"
                android:textColor="@color/primary_text_color"
                android:textSize="16sp"
                android:textAllCaps="true"
                />

    </LinearLayout>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_app_icon2"
            android:padding="0dip"
        android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:contentDescription="Call background">

    </ImageView>

    <RelativeLayout
            android:id="@+id/bottomPanel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                    android:id="@+id/answerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:background="@color/answer"
                android:text="@string/answer"
                android:textColor="@color/white"
                android:paddingStart="@dimen/margin_32"
                android:paddingEnd="@dimen/margin_32"
                android:textSize="@dimen/primary_size"
                android:layout_marginEnd="@dimen/margin_8"
                    />

            <Button
                    android:id="@+id/declineButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/decline"
                    android:text="@string/decline"
                android:textColor="@color/white"
                android:paddingStart="@dimen/margin_32"
                android:paddingEnd="@dimen/margin_32"
                android:textSize="@dimen/primary_size"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_toRightOf="@+id/answerButton"/>

    </RelativeLayout>

</LinearLayout>