<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dip"
    tools:context=".video.LoginActivity">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/background_gray"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_8"
            app:srcCompat="@drawable/profile"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/large_size"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            android:padding="@dimen/margin_8"
            android:text="@string/hi_msg"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="@dimen/text_margin"
            android:paddingBottom="@dimen/text_margin"
            android:paddingStart="@dimen/text_margin"
            android:paddingEnd="@dimen/margin_8"
            android:text="@string/english"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/large_size"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btEmergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/user_emergency"
            android:textColor="@color/white"
            android:textSize="@dimen/large_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_8"
            android:text="@string/or"
            android:textStyle="bold"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSelectDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/user_select_doctor"
            android:textColor="@color/white"
            android:textSize="@dimen/large_size"
            android:textStyle="bold" />

        <!--        <androidx.appcompat.widget.AppCompatEditText-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textStyle="bold"-->
        <!--            android:text="@string/or"-->
        <!--            android:visibility="invisible"/>-->

        <!--        <androidx.appcompat.widget.AppCompatTextView-->
        <!--            android:id="@+id/btCovid"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textSize="@dimen/primary_size"-->
        <!--            android:textColor="@color/primary_text_color"-->
        <!--            android:textStyle="bold"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/user_corona"/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="Enter your name"
            android:textAllCaps="true"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/loginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/inputbox"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text="mahmoud"
            android:textColor="@color/sinch_purple"
            android:textSize="32sp">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_login"
        android:minWidth="132dp"
        android:minHeight="56dp"
        android:textColor="@color/off_white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llSplash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_app_icon2" />
    </LinearLayout>

<!--    <androidx.constraintlayout.widget.Guideline-->
<!--        android:id="@+id/guideline"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintGuide_percent="0.35"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>